--- a/Unit15/scss/_small.scss
+++ b/Unit15/scss/_small.scss
@@ -62,10 +62,17 @@ nav{
   position: relative;
 }
 
+#mainNav ul{
+    padding-left: 0;
+}
+
 #mainNav li{
     list-style-type: none;
     text-emphasis: none;
     text-decoration: none;
+    text-align: center;
+    margin: 0 0 1rem 0;
+    
 
 }
 
@@ -248,7 +255,7 @@ background: linear-gradient(to bottom,  rgba(4,129,173,1) 1%,rgba(3,77,114,1) 10
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0481ad', endColorstr='#034d72',GradientType=0 ); /* IE6-9 */
 
 color: white;
-margin-top: -4px;
+margin-top: -3px;
 }
 
 
